improved layout and function

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -38,4 +38,11 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  
 </html>
+
+<style>
+  body{
+    background-color: rgb(169, 182, 173);
+  }
+</style>
